# caraccel

./: .gitignore  LICENSE  README.md  platformio.ini
app/CarAccel/: capacitor.config.ts  ionic.config.json  package-lock.json  package.json
caraccel-idf/: sdkconfig
caraccel-idf/main/: CMakeLists.txt  caraccel.c  common.h  gap.c  gatt_svc.c  gatt_svc.h  gps.cpp  gps.hpp  idf_component.yml  mpu9250.c  mpu9250.h  screen.c  screen.h  sm_time_speed.c  sm_time_speed.h
pcb/caraccel/: boardadaptor.kicad_sch  caraccel.kicad_pcb  caraccel.kicad_prl  caraccel.kicad_pro  caraccel.kicad_sch  caraccel_10x10.kicad_pcb  caraccel_10x10.kicad_prl  caraccel_10x10.kicad_pro
pcb/caraccel/grb/: caraccel-B_Cu.gbr  caraccel-B_Mask.gbr  caraccel-B_Paste.gbr  caraccel-B_Silkscreen.gbr  caraccel-Edge_Cuts.gbr  caraccel-F_Cu.gbr  caraccel-F_Mask.gbr  caraccel-F_Paste.gbr  caraccel-F_Silkscreen.gbr  caraccel-job.gbrjob  caraccel_10x10-B_Cu.gbr  caraccel_10x10-B_Mask.gbr  caraccel_10x10-B_Paste.gbr  caraccel_10x10-B_Silkscreen.gbr  caraccel_10x10-Edge_Cuts.gbr  caraccel_10x10-F_Cu.gbr  caraccel_10x10-F_Mask.gbr  caraccel_10x10-F_Paste.gbr  caraccel_10x10-F_Silkscreen.gbr  caraccel_10x10-job.gbrjob
pcb/caraccel/grb2/: caraccel-B_Cu.gbr  caraccel-B_Mask.gbr  caraccel-B_Paste.gbr  caraccel-B_Silkscreen.gbr  caraccel-Edge_Cuts.gbr  caraccel-F_Cu.gbr  caraccel-F_Mask.gbr  caraccel-F_Paste.gbr  caraccel-NPTH.drl  (+6 more)
pcb/caraccel2/: caraccel2.kicad_pcb  caraccel2.kicad_prl  caraccel2.kicad_pro  caraccel2.kicad_sch  fp-info-cache
src/: main.cpp  screen.cpp  screen.h  smmeasure.cpp  smmeasure.h
(+39 files in other folders)
