idf_component_register(SRCS 
                    "caraccel.c"
                    "screen.c"
                    "screen.h"
                    "gps.cpp"
                    "gps.hpp"
                    "mpu9250.c"
                    "mpu9250.h"
                    "sm_time_speed.c"
                    "sm_time_speed.h"
                    INCLUDE_DIRS ".")
